--- a/second-hand-b/src/docs/asciidoc/index.adoc
+++ b/second-hand-b/src/docs/asciidoc/index.adoc
@@ -44,3 +44,96 @@ operation::product_modifyWithWrongRequest[snippets='http-request,http-response']
 === 상품 상태 수정
 
 operation::product_modifyStatus[snippets='http-request,http-response']
+
+[[auth]]
+== 인증
+
+=== 회원가입
+
+operation::auth_signup[snippets='http-request,http-response']
+
+[[member]]
+== 회원
+
+=== 관심 상품 선택
+
+operation::member_addLikeProduct[snippets='http-request,http-response']
+
+=== 관심 상품 해제
+
+operation::member_removeLikeProduct[snippets='http-request,http-response']
+
+=== 관심 상품 목록용 카테고리 조회
+
+operation::member_getLikeCategory[snippets='http-request,http-response']
+
+=== 관심 상품 목록 조회
+
+operation::member_getLikeProducts[snippets='http-request,http-response']
+
+=== 카테고리별 관심 상품 목록 조회
+
+operation::member_getLikeProductsByCategory[snippets='http-request,http-response']
+
+=== 판매 상품 목록 조회
+
+operation::member_getSalesProducts[snippets='http-request,http-response']
+
+=== 상태별 판매 상품 목록 조회
+
+operation::member_getSalesProductsByStatus[snippets='http-request,http-response']
+
+=== 회원 정보 조회
+
+operation::member_getProfile[snippets='http-request,http-response']
+
+[[동네]]
+== 동네
+
+=== 동네 추가
+
+operation::memberRegion_add[snippets='http-request,http-response']
+
+=== 동네 삭제
+
+operation::memberRegion_remove[snippets='http-request,http-response']
+
+=== 동네 선택
+
+operation::memberRegion_select[snippets='http-request,http-response']
+
+=== 내 동네 목록 조회
+
+operation::memberRegion_getRegionsByMember[snippets='http-request,http-response']
+
+=== 동네 목록 조회
+
+operation::region_getRegions[snippets='http-request,http-response']
+
+=== 동네 목록 동네명 검색
+
+operation::region_getRegionsByName[snippets='http-request,http-response']
+
+[[카테고리]]
+== 카테고리
+
+=== 카테고리 목록 조회
+
+operation::category_getCategories[snippets='http-request,http-response']
+
+operation::category_getCategoriesWithImg[snippets='http-request,http-response']
+
+[[이미지]]
+== 이미지
+
+=== 회원용 이미지 업로드
+
+operation::image_uploadImageForMember[snippets='http-request,http-response']
+
+=== 상품용 이미지 업로드
+
+operation::image_uploadImageForProduct[snippets='http-request,http-response']
+
+=== 이미지 삭제
+
+operation::image_delete[snippets='http-request,http-response']
