docs: RestDocs 채팅 API 추가

--- a/second-hand-b/src/docs/asciidoc/index.adoc
+++ b/second-hand-b/src/docs/asciidoc/index.adoc
@@ -137,3 +137,18 @@ operation::image_uploadImageForProduct[snippets='curl-request,http-response']
 === 이미지 삭제
 
 operation::image_delete[snippets='http-request,http-response']
+
+[[채팅]]
+== 채팅
+
+=== 채팅방 아이디 조회
+
+operation::chat_getChattingRoomId[snippets='http-request,http-response']
+
+=== 채팅방 조회
+
+operation::chat_getChattingRoomDetail[snippets='http-request,http-response']
+
+=== 채팅방 목록 조회
+
+operation::chat_getJoinedChatRooms[snippets='http-request,http-response']
